# ROS2

Module2/ex01/: .bashrc
Module2/ex03/BBQmaybe/: CMakeLists.txt  package.xml
Module2/ex04/: colcon_build.txt
Module2/ex05/: rosnode_info.txt  rosnode_list.txt
Module2/ex08/: rqt_console.csv
Module2/ex09/full_name_package/: CMakeLists.txt  package.xml
Module2/ex10/text_to_cmd_vel/: package.xml  setup.py
Module2/ex10/text_to_cmd_vel/text_to_cmd_vel/: text_to_cmd_vel.py
Module3/ex01/src/cpp_srvcli/: CMakeLists.txt
Module3/ex01/src/full_name_service/: package.xml
Module3/ex02/test_actions/: package.xml
Module3/ex02/turtle_action/: package.xml
Module3/ex03/: commands.txt  pose_speed_x1.yaml  pose_speed_x2.yaml
Module3/ex03/turtle_cmd_vel/: metadata.yaml  turtle_cmd_vel_0.db3
Module3/ex04/: doctor.txt
Module3/ex05/move_to_goal/: package.xml  setup.py
Module4/ex02/: carrot.rviz  commands.txt
Module4/ex02/turtles_and_carrots/: package.xml
Module4/ex03/just_turtles/: package.xml
Module5/ex04/robot_app/src/: circle_movement.cpp
Module5/ex04/robot_bringup/launch/: diff_drive.launch.py
Module5/ex05/unique_movements/: package.xml  setup.py
Module6/ex03/src/robot_bringup/config/: robot_bridge.yaml
Module6/ex03/src/robot_bringup/launch/: robot_lidar.launch.py
Module6/ex03/src/robot_description/urdf/: gazebo.urdf.xacro  imu.urdf.xacro  robot_lab6.urdf.xacro
Module6/ex04-05/src/move_lab6/: package.xml  setup.py
Module6/ex04-05/src/robot_bringup/launch/: robot_lidar.launch.py
ex01/: commands.txt
