<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <member_of_group>rosidl_interface_packages</member_of_group>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <name>text_to_cmd_vel</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mary@todo.todo">mary</maintainer>
  <license>TODO: License declaration</license>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
